2002-05-13  Vince Darley <vincentdarley@sourceforge.net>
	* library/mk4vfs.tcl: newer version from tclkit.

2002-05-03  Vince Darley <vincentdarley@sourceforge.net>
	* tests/*: more test improvements, and new file vfsArchive.test
	which will test the running of the tests inside an archive. 
	This requires recursive invocation of the 'tcltest' package,
	which may well cause some problems if it isn't designed to
	handle that (i.e. executing one test actually causes the
	execution of a lot of other tests).
	* library/pkgIndex.tcl: update to try to avoid the 'no such
	command vfs::*::Mount' error messages which you can get, if
	the relevant .tcl files are not on your auto_path.

2002-05-02  Vince Darley <vincentdarley@sourceforge.net>
	* tests/vfs.test: tests work independent of directory in which
	they run.  Tests added to check that at least 'vfs::memchan'
	basically works, and vfs::zip, vfs::crc helpers do what they
	are supposed to.
	* tests/vfsZip.test: test to run all tests inside a zip.
	* mac/*: updated for removal of scripdoc.tcl and vfs.tcl
	
2002-04-25  Jean-Claude Wippler <jcw@equi4.com>
	* library/*vfs.tcl: switching to vfs::{crc,memchan,zip}
	* library/vfsUtils.tcl: fixed env to be global, added unset
	so unmounting cleans up its list of mounted file systems,
	define Trf/memchan-based versions of vfs::{crc,memchan,zip}
	* library/{scripdoc.tcl,vfs.tcl}: removed, tclkit specific
	* library/pkgIndex.tcl: drop packages "scripdoc" and "vfslib"

2002-04-25  Vince Darley <vincentdarley@sourceforge.net>
	* tests/*: revamp of tests to be more robust, and to be
	able to run from inside a mounted virtual filesystem.
	
2002-04-09  Jean-Claude Wippler <jcw@equi4.com>
	* configure: generated and added to project

2002-04-08  Daniel Steffen  <das@users.sourceforge.net>
	* mac/pkgIndex_mac.tcl: synced to generic/pkgIndex.tcl

2002-04-01  Vince Darley <vincentdarley@sourceforge.net>
	* Makefile.in: compilation fix from jcw.
	