@@ -57,6 +57,7 @@ set auto_index(::mk4vfs::mkdir) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::getdir) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::mtime) [list source [file join $dir mk4vfs.tcl]]
 set auto_index(::mk4vfs::delete) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(loadvfs) [list source [file join $dir pkgIndex.tcl]]
 set auto_index(::vfs::ns::Mount) [list source [file join $dir tclprocvfs.tcl]]
 set auto_index(::vfs::ns::Unmount) [list source [file join $dir tclprocvfs.tcl]]
 set auto_index(::vfs::ns::handler) [list source [file join $dir tclprocvfs.tcl]]
@@ -119,6 +120,18 @@ set auto_index(::vfs::indexToAttribute) [list source [file join $dir vfsUtils.tc
 set auto_index(::vfs::attributesGet) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::attributesSet) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::posixError) [list source [file join $dir vfsUtils.tcl]]
+set auto_index(::vfs::webdav::Mount) [list source [file join $dir webdavvfs.tcl]]
+set auto_index(::vfs::webdav::Unmount) [list source [file join $dir webdavvfs.tcl]]
+set auto_index(::vfs::webdav::handler) [list source [file join $dir webdavvfs.tcl]]
+set auto_index(::vfs::webdav::stat) [list source [file join $dir webdavvfs.tcl]]
+set auto_index(::vfs::webdav::access) [list source [file join $dir webdavvfs.tcl]]
+set auto_index(::vfs::webdav::open) [list source [file join $dir webdavvfs.tcl]]
+set auto_index(::vfs::webdav::matchindirectory) [list source [file join $dir webdavvfs.tcl]]
+set auto_index(::vfs::webdav::createdirectory) [list source [file join $dir webdavvfs.tcl]]
+set auto_index(::vfs::webdav::removedirectory) [list source [file join $dir webdavvfs.tcl]]
+set auto_index(::vfs::webdav::deletefile) [list source [file join $dir webdavvfs.tcl]]
+set auto_index(::vfs::webdav::fileattributes) [list source [file join $dir webdavvfs.tcl]]
+set auto_index(::vfs::webdav::utime) [list source [file join $dir webdavvfs.tcl]]
 set auto_index(::vfs::zip::Execute) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::Mount) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::Unmount) [list source [file join $dir zipvfs.tcl]]
